tests/ui/type-alias-impl-trait/generic_duplicate_param_use4.stderr
error[E0277]: `U` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use4.rs:11:5
   |
LL |     u
   |     ^ `U` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
help: consider restricting type parameter `U`
   |
LL | type Two<T, U: std::fmt::Debug> = impl Debug;
   |              +++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
